--- a/styles.css
+++ b/styles.css
@@ -1,201 +1,35 @@
+html {
+    height: 100%
+}
+
 body {
-    margin: 0;
+    background-image: url('main.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: relative;
+    font-family: "Chalkduster", fantasy;
 }
-header {
-    background-color: #1F2937;
+
+footer {
+    color: white;
+    width: 100%;
+    margin: 0 0;
+    padding: 0 0;
+    bottom: 0;
+    position: fixed;
+}
+
+footer p {
+    text-align: center;
+    padding: 0 40px;
+    font-size: 10px;
+}
+
+footer a {
+    text-decoration: none;
     color: white;
 }
 
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav-bar .header-logo {
-    font-size: 18px;
-    color: #F9FAF8;
-    display: flex;
-    align-self: flex-start;
-}
-
-.header-logo {
-    margin-left: 150px;
-}
-
-.header-links {
-    margin-right: 150px;
-}
-
-.header-links, .img-text, .button, .random-text {
-    font-size: 18px;
-    color: #E5E7EB;
-} 
-
-.awesome-web {
-    font-size: 48px;
-    color: #F9FAF8;
-    font-weight: bolder;
-    margin: 0;
-}
-
-.website-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    width: 350px;
-    height: 350px;
-    margin-left: 10px;
-    
-}
-
-.random-text {
-    margin: 0;
-}
-
-ul {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    list-style: none;
-}
-
-.two-blocks {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 40px;
-}
-
-.button {
-    background-color: #3882F6;
-    padding: 5px 30px;
-    margin: 10px;
-    width: fit-content;
-    border-radius: 10px;
-}
-
-.image {
-    background-color: #A9A9A9 ;
-    border: 1px solid;
-    padding: 100px 100px;
-}
-
-.title-random {
-    font-weight: bold;
-    font-size: 34px;
-    padding: 5px 5px;
-    margin: 20px 20px;
-    text-align: center;
-}
-
-.some-random-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.square-one, .square-two, .square-three, .square-four {
-    border: 3px solid;
-    border-radius: 10px;
-    border-color: blue;
-    width: 150px;
-    height: 150px;
-}
-
-.one, .two, .three, .four {
-    width: 150px;
-    height: 150px;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    text-align: center;
-}
-
-.long-paragraph {
-    background-color: #E5E7EB;
-    width: auto;
-    height: auto;
-}
-
-.long-text {
-    font-family: "Andale Mono", monospace;
-    font-size: 26px;
-    color: #1F2937;
-    font-weight: lighter;
-    text-align: center;
-    margin: 20px 20px;
-    padding: 10px 320px;
-    padding-top: 70px;
-}
-
-.thor {
-    font-size: 20px;
-    text-align: end;
-    margin-right: 320px;
-    padding-top: 0px;
-    padding-bottom: 50px;
-}
-
-.section-four {
-    background-color: White;
-    height: auto;
-    width: auto;
-    padding: 70px 200px;
-    
-}
-
-.text-and-button {
-    background-color: #3882F6;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 20px 20px;
-    padding: 50px 50px;
-    flex-wrap: wrap;
-    border-radius: 15px;
-}
-
-.blue-inner-section {
-    background-color: #3882F6;
-    color: white;
-}
-
-.call-to-action {
-    font-weight: bold;
-    font-size: 25px;
-    margin-bottom: 0px;
-}
-
-.sign-up-text {
-    font-weight: lighter;
-    margin-top: 0px;
-}
-
-.action-button {
-    background-color: #3882F6;
-    color: white;
-    text-align: center;
-    padding: 10px 30px;
-    border: 3px solid;
-    border-radius: 10px;
-    border-color: white;
-}
-
-.footer {
-    background-color:#1F2937;
-    color: white;
-    height: 100px;
-    width: auto;
-}
-
-.footer p {
-    text-align: center;
-    padding: 40px 40px;
-    font-family: Arial, sans-serif;
+footer a:hover {
+    color: yellow;
 }
